2007-05-06  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Patch r283 from trunk
        * Bump version for 0.9.5.1 release

2006-11-08  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Forgot to include changeset [251] when porting php 5.2 support to the
          0.9.5 branch. This fixes bug #204.

2006-10-10  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Fix a bug in the ttl of the cache. see ticket #182
        * Release version 0.9.5

2006-09-19  Hans Rakers <hans at parse dot nl>

        * Get session config variables from local values instead of global
          values. This enables altering of session-related settings like
          gc_maxlifetime, entropy_file and entropy_length through ini_set().
          This fixes ticket #166

2006-09-15  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Reverse changeset 205 (doc-comment exclusion) from Tom Regner 
          <t.regner at librics.de>. 
        * Some fixes to make eAccelerator compile with php 5.2, this fixes bug #150
        * Restore __toString methods correctly with php 5.2
        * only put the function that has the same name as the class as contructor 
          if there isn't a __construct function. This fixes ticket #172
        * Don't free memory with efree that has been allocated from the eA shm cache.
          This should fix A LOT of bugreports in Trac and on SF. It fixes #171 but 
          I think also some other bugs.

2006-08-29  Hans Rakers <hans at parse dot nl>

        * Skip disk cache creation and clean/clear actions when operating in
          shm_only mode. This fixes ticket #165

2006-08-23  Hans Rakers <hans at parse dot nl>

        * Fixes for tickets #157 and #164

2006-08-06  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Fix stupid bug (#159)
        * Handle returning null instead of array (#156)

2006-08-03  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>
